--- a/styles/style.css
+++ b/styles/style.css
@@ -1,169 +1,158 @@
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
-html, body {
+html {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(90,92,106,1) 0%, rgba(32,45,58,1) 81.3% );
-  min-height: 100vh;
-}
+  background-image: radial-gradient(circle farthest-corner at 10% 20%, #5a5c6a 0%, #202d3a 81.3%);
+  min-height: 100vh; }
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: radial-gradient(circle farthest-corner at 10% 20%, #5a5c6a 0%, #202d3a 81.3%);
+  min-height: 100vh; }
+
 .header {
   overflow: hidden;
   background-color: #000000;
-  padding: 5px 5px;
-}
-
-.header a {
-  float: left;
-  text-align: center;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 4px;
-  color: whitesmoke;
-}
-
- .header a.logo {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
+  padding: 5px 5px; }
+  .header a {
+    float: left;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+    color: whitesmoke; }
+    .header a:hover {
+      background-color: #ddd;
+      color: black; }
+  .header a.logo {
+    font-size: 20px;
+    font-weight: bold; }
 
 .header-right {
-  float: right;
-}
+  float: right; }
 
 .header-left {
-  float: left;
-}
+  float: left; }
 
 .head {
   display: flex;
   margin: 5px;
   justify-content: space-between;
-  flex-flow: row wrap;
-}
+  flex-flow: row wrap; }
 
 .actions {
   font-size: 150%;
   margin-bottom: auto;
-  margin-top: auto;
-}
+  margin-top: auto; }
 
-h1, h2, h3, h4, h5 {
+h1 {
+  padding-bottom: 8px; }
+
+h2 {
+  padding-bottom: 8px; }
+
+h3 {
+  padding-bottom: 8px; }
+
+h4 {
   padding-bottom: 8px;
-}
+  border-bottom: 1px solid #807d7d; }
+
+h5 {
+  padding-bottom: 8px; }
+
 .container {
   margin: 10px 0 0 50px;
   width: 60%;
-  text-align: left;
-}
+  text-align: left; }
 
 .profile_card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   border-radius: 40px;
   margin-top: 15px;
-  background-image: radial-gradient( circle farthest-corner at 10% 20%, rgb(163, 168, 214) 0%, rgb(205, 216, 226) 81.3% );
-}
+  background-image: radial-gradient(circle farthest-corner at 10% 20%, #a3a8d6 0%, #cdd8e2 81.3%); }
 
 .add {
-    color: #13b013;
-}
+  color: #13b013; }
+
 .delete {
-    color: red;
-}
+  color: red; }
+
 .edit {
-    color: darkgoldenrod;
-}
+  color: darkgoldenrod; }
 
 img {
   width: 25%;
   border-radius: 50%;
   border: 1px solid #ddd;
-  padding: 5px;
-}
+  padding: 5px; }
+
 .flex-row-center {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-}
+  flex-wrap: wrap; }
+
 .role {
   color: #605d5d;
-  font-size: 16px;
-}
+  font-size: 16px; }
+
 .course_card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   text-align: center;
   padding: 10px 0 10px 0;
   margin-bottom: 10px;
-  background-color: #a7d7d3;
-}
+  background-color: #a7d7d3; }
 
 .request_card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 100%;
   text-align: left;
   padding: 2px 0 2px 2px;
-  margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
 
 .row:after {
   content: "";
   display: table;
-  clear: both;
-}
+  clear: both; }
 
 .title {
-    margin-left: 10px;
-}
+  margin-left: 10px; }
 
 .user_card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 20%;
-    margin: 1% 0 0 1%;
-    text-align: center;
-    background-image: radial-gradient( circle farthest-corner at 10% 20%, rgb(163, 168, 214) 0%, rgb(205, 216, 226) 81.3% );
-}
-
-.user_card a {
-    display: block; /* Ссылка как блочный элемент */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 20%;
+  margin: 1% 0 0 1%;
+  text-align: center;
+  background-image: radial-gradient(circle farthest-corner at 10% 20%, #a3a8d6 0%, #cdd8e2 81.3%); }
+  .user_card a {
+    display: block;
     height: 100%;
     text-decoration: none;
-    color: black;
-}
-.user_card:hover {
-     box-shadow:
-        1px 1px #A3A8D6,
-        2px 2px #A3A8D6,
-        3px 3px #A3A8D6,
-        4px 4px #A3A8D6,
-        5px 5px #A3A8D6;
+    color: black; }
+  .user_card:hover {
+    box-shadow: 1px 1px #A3A8D6, 2px 2px #A3A8D6, 3px 3px #A3A8D6, 4px 4px #A3A8D6, 5px 5px #A3A8D6;
     -webkit-transform: translateX(-7px);
     transform: translateX(-7px);
-    transition:all 0.3s ease;
-}
+    transition: all 0.3s ease; }
 
 .courses_list {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-}
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
 
 .user_information_card {
-    text-align: center;
-    margin: 25px 12.5% 0 12.5%;
-    width: 75%;
-}
+  text-align: center;
+  margin: 25px 12.5% 0 12.5%;
+  width: 75%; }
 
 .card_column {
   padding: 15px;
@@ -171,48 +160,42 @@ img {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border: 1px solid black;
   border-radius: 5px;
-  background-image: radial-gradient( circle farthest-corner at 10% 20%, rgb(115, 120, 171) 0%, rgb(164, 181, 196) 81.3% );
-}
+  background-image: radial-gradient(circle farthest-corner at 10% 20%, #7378ab 0%, #a4b5c4 81.3%); }
+
 .leftcolumn {
   float: left;
   width: 20%;
-  margin: 15px 1% 0 1%;
-}
-.leftcolumn h2 {
-  border-bottom: 1px solid #b5b3b3;
-}
+  margin: 15px 1% 0 1%; }
+  .leftcolumn h2 {
+    border-bottom: 1px solid #b5b3b3; }
 
 .centercolumn {
   float: left;
   text-align: center;
   margin-right: auto;
   margin-left: auto;
-  width: 56%;
-}
-.centercolumn h1, h4 {
-  border-bottom: 1px solid #807d7d;
-}
+  width: 56%; }
+  .centercolumn h1 {
+    border-bottom: 1px solid #807d7d; }
+
 .padding_container {
-  padding: 10px;
-}
+  padding: 10px; }
 
 .rightcolumn {
   float: right;
   width: 20%;
-  margin: 15px 1% 0 1%;
-}
-.rightcolumn h2 {
-  border-bottom: 1px solid #b5b3b3;
-}
+  margin: 15px 1% 0 1%; }
+  .rightcolumn h2 {
+    border-bottom: 1px solid #b5b3b3; }
+
 .approved_request {
-    background: #00ff00;
-}
+  background: #00ff00; }
+
 .disapproved_request {
-    background: red;
-}
+  background: red; }
+
 .sent_request {
-    background: grey;
-}
+  background: grey; }
 
 .confirm_button {
   background-color: #2c9f2f;
@@ -222,8 +205,9 @@ img {
   border: none;
   cursor: pointer;
   width: 25%;
-  opacity: 0.9;
-}
+  opacity: 0.9; }
+  .confirm_button:hover {
+    opacity: 1; }
 
 .cancel_button {
   background-color: #c12727;
@@ -233,16 +217,9 @@ img {
   border: none;
   cursor: pointer;
   width: 25%;
-  opacity: 0.9;
-}
-
-.confirm_button:hover {
-  opacity:1;
-}
-
-.cancel_button:hover {
-  opacity:1;
-}
+  opacity: 0.9; }
+  .cancel_button:hover {
+    opacity: 1; }
 
 .form_card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -251,45 +228,70 @@ img {
   text-align: center;
   border-radius: 40px;
   padding: 10px;
-  background-image: radial-gradient( circle farthest-corner at 10% 20%, rgb(115, 120, 171) 0%, rgb(164, 181, 196) 81.3% );
-}
+  background-image: radial-gradient(circle farthest-corner at 10% 20%, #7378ab 0%, #a4b5c4 81.3%); }
+  .form_card input[type=text] {
+    width: 70%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+    border-radius: 10px; }
 
-.form_card input[type=text], input[type=password], select {
+input[type=password] {
   width: 70%;
   padding: 15px;
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
-  border-radius: 10px;
-}
+  border-radius: 10px; }
+  input[type=password]:focus {
+    background-color: #ddd;
+    outline: none; }
 
-input[type=text]:focus, input[type=password]:focus, select:focus {
+select {
+  width: 70%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+  border-radius: 10px; }
+  select:focus {
+    background-color: #ddd;
+    outline: none; }
+
+input[type=text]:focus {
   background-color: #ddd;
-  outline: none;
-}
+  outline: none; }
 
-@media screen and (max-width:1100px) {
-  .rightcolumn, .leftcolumn, .centercolumn {
-    width:90%;
+@media screen and (max-width: 1100px) {
+  .rightcolumn {
+    width: 90%;
     float: left;
     margin-left: 5%;
-    margin-right: 5%;
-  }
-}
-@media screen and (max-width:600px) {
-     .header-right {
-         float: left;
-     }
-}
+    margin-right: 5%; }
 
-@media screen and (max-width:1000px) {
-     .user_card {
-        width: 40%;
-     }
-}
-@media screen and (max-width:700px) {
-     .user_card {
-        width: 80%;
-     }
-}
+  .leftcolumn {
+    width: 90%;
+    float: left;
+    margin-left: 5%;
+    margin-right: 5%; }
+
+  .centercolumn {
+    width: 90%;
+    float: left;
+    margin-left: 5%;
+    margin-right: 5%; } }
+@media screen and (max-width: 600px) {
+  .header-right {
+    float: left; } }
+@media screen and (max-width: 1000px) {
+  .user_card {
+    width: 40%; } }
+@media screen and (max-width: 700px) {
+  .user_card {
+    width: 80%; } }
+
+/*# sourceMappingURL=style.css.map */
